# cookieclicker_60fps

./: Cargo.toml  README.md  build.rs
src/: main.rs
ui/: appwindow.60
