[package]
name = "cookieclicker_60fps"
version = "0.1.0"
authors = ["Thomas <thomastimmer11@hotmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sixtyfps = "0.1"
num-bigint = "0.4"
num-traits = "0.2"
textwrap = "0.14"
derive_more = "0.99"
getset = "0.1"

[build-dependencies]
sixtyfps-build = "0.1"
